tests/NormalTests/paczka1/small_fuzzy/41460544.err
Error in line 3: Vqb3MMSEbTf S354 37,7
Error in line 2: LcE S593 84,5
